# dcc-insider-plugin

./: CMakeLists.txt  insidermodule.cpp  insidermodule.h  insiderplugin.cpp  insiderplugin.h  pkutils.h
.reuse/: dep5
.tx/: transifex.yaml
dcc-insider/: CMakeLists.txt
dcc-insider-plugin/: CMakeLists.txt  insidermodule.cpp  insidermodule.h
dcc-insider/operation/: dccinsider.cpp  dccinsider.h  insiderworker.cpp  insiderworker.h  pkpackagesproxy.cpp  pkpackagesproxy.h
dcc-insider/qml/: InsiderMain.qml  ViewItem.qml  dcc_insider.dci  insider.qml  insiderMain.qml  main.qml
dcc-insider/translations/: insider_bo.ts  insider_ca.ts  insider_de_DE.ts  insider_es.ts  insider_fi.ts  insider_fr.ts  insider_ja.ts  insider_ko.ts  insider_lo.ts  insider_nl.ts  insider_pl.ts  insider_pt_BR.ts  insider_ru.ts  insider_sq.ts  insider_tr.ts  insider_uk.ts  insider_vi.ts  insider_zh_CN.ts  insider_zh_HK.ts  insider_zh_TW.ts
debian/: changelog  control  copyright  rules
helper/: CMakeLists.txt  dcc-insider-dm-switch.cpp
misc/polkit-action/: org.deepin.dcc.insider.dm-switch.policy.in
misc/ts/org.deepin.dcc.insider.dm-switch.policy/: policy.ts  policy_bo.ts  policy_ca.ts  policy_de.ts  policy_en.ts  policy_es.ts  policy_fi.ts  policy_fr.ts  policy_ja.ts  policy_nl.ts  policy_pl.ts  policy_pt_BR.ts  policy_ru.ts  policy_sq.ts  policy_ug.ts  policy_uk.ts  policy_zh_CN.ts  policy_zh_HK.ts  policy_zh_TW.ts
translations/: dcc-insider-plugin.ts  dcc-insider-plugin_zh_CN.ts  dcc-insider-plugin_zh_HK.ts  dcc-insider-plugin_zh_TW.ts
